2016-07-15  Jason Merrill  <jason@redhat.com>

	PR c++/71513
	* pt.c (tsubst_attributes): Fix loop logic.

	PR c++/71604
	PR c++/54430
	* parser.c (cp_parser_range_for): Modify IDENTIFIER_BINDING directly.
	(cp_parser_simple_declaration): Diagnose type definition in
	for-range-declaration.

	PR c++/71711
	* operators.def: Add *_FOLD_EXPR.
	* cp-tree.h (FOLD_EXPR_P): Parenthesize.
	* mangle.c (write_expression): Handle fold-expressions.
	* pt.c (tsubst_unary_left_fold, tsubst_binary_left_fold)
	(tsubst_unary_right_fold, tsubst_binary_right_fold): Handle
	partial instantiation.

	PR c++/71814
	* mangle.c (write_expression): Handle sizeof... an argument pack.

	PR c++/71718
	* pt.c (push_tinst_level_loc): Set at_eof before fatal_error.

	PR c++/70824
	* init.c (constant_value_1): Don't instantiated DECL_INITIAL of
	artificial variables.

2016-07-15  Cesar Philippidis  <cesar@codesourcery.com>

	* parser.c (cp_parser_oacc_declare): Don't scan for
	GOMP_MAP_POINTER.
	* semantics.c (handle_omp_array_sections): Mark data clauses with
	GOMP_MAP_FORCE_{PRESENT,TO,FROM,TOFROM} as potentially having
	zero-length subarrays.

2016-07-11  Jason Merrill  <jason@redhat.com>

	* decl.c (store_parm_decls): Remove check for void parm.

2016-07-08  Jason Merrill  <jason@redhat.com>

	* cp-tree.h: Unpoison lvalue_p.
	* call.c, class.c, constexpr.c, cvt.c, init.c, lambda.c, pt.c,
	tree.c, typeck.c, typeck2.c: Use lvalue_p instead of
	real_lvalue_p.

	* tree.c (obvalue_p): Rename from lvalue_p.
	(lvalue_p): Define for c-common.
	* call.c, cp-tree.h, cvt.c, init.c: Adjust.
	* typeck.c: Adjust.
	(cp_build_addr_expr_1): Remove obsolete code.

	* tree.c (glvalue_p): Rename from lvalue_or_rvalue_with_address_p.
	* call.c, cp-tree.h, typeck.c: Adjust.

	* lambda.c (maybe_add_lambda_conv_op): Fix null object argument.

	P0145R2: Refining Expression Order for C++.
	* cp-gimplify.c (lvalue_has_side_effects): New.
	(cp_gimplify_expr): Implement assignment ordering.